app/scss/components/_nav.scss
@use "../base/breakpoints" as *;

.navbar {
  position: sticky;
  top: 0;
  z-index: 999;
  background: hsl(0deg 0% 100% / 85%);
  border-bottom: 1px solid var(--blue-gray-50);
  backdrop-filter: saturate(180%) blur(5px);
  backface-visibility: hidden;

  &__container {
    display: flex;
    align-items: center;
    justify-content: space-between;
    max-width: 1080px;
    margin: 0 auto;
    padding: 1rem 2rem;
    transition: padding 150ms ease-in;

    @include breakpoint(sm-tablet) {
      padding: 1rem;
    }
  }

  &__overlay {
    position: absolute;
    z-index: -1;
    top: 0;
    left: -100vw;
    width: 100vw;
    height: 100vh;
    content: "";
    transition: opacity 300ms ease-in;
    pointer-events: none;
    opacity: 0;
    background-color: hsla(213, 78%, 8%, 0.9);

    @media (min-width: 992px) {
      background-color: transparent;
    }
  }

  &__logo {
    width: 120px;
    min-width: 120px;
    height: 40px;

    @include breakpoint(lg-tablet) {
      display: flex;
    }

    svg {
      width: 120px;
      height: 40px;
    }
  }

  &__links {
    font-weight: 600;
    display: flex;
    align-items: center;
    gap: 1rem;

    @include breakpoint(lg-tablet) {
      position: absolute;
      z-index: 1000;
      top: 0;
      right: 0;
      flex-direction: column;
      gap: 3rem;
      width: 50vw;
      height: 100vh;
      padding: min(30vh, 5rem) 2rem;
      transition: opacity 300ms ease-in;
      pointer-events: none;
      opacity: 0;
      background-color: hsla(0, 0%, 100%, 0.98);
      backdrop-filter: blur(5px);
    }

    @include breakpoint(sm-tablet) {
      width: 100vw;
    }

    &[data-visible="true"] {
      .navbar__overlay {
        opacity: 1;
      }
    }
  }

  &__link {
    padding: 0.5rem 1rem;
    cursor: pointer;
    color: var(--blue-900);

    &:hover {
      color: var(--blue-500);
    }
  }

  &__hamburger {
    z-index: 9999;
    display: none;
    width: 22px;
    height: 22px;
    padding: 0;
    cursor: pointer;
    border: none;
    background: none;
    aspect-ratio: 1;

    @include breakpoint(lg-tablet) {
      display: flex;
      flex-direction: column;
      justify-content: center;
      gap: 0.3rem;
    }

    .line {
      width: 100%;
      height: 2px;
      transition: transform 500ms cubic-bezier(0.68, -0.6, 0.32, 1.6);
      transform-origin: left;
      background-color: var(--blue-gray-400);
    }

    &[aria-expanded="true"] {
      .line-1 {
        transform: rotate(45deg) translate(0px, -4px);
      }

      .line-2 {
        transform: rotate(-45deg) translate(-3px, 6px);
      }
    }
  }

  &--borderless {
    border: none;
  }
}

.dropdown {
  position: relative;
  cursor: pointer;

  &:hover {
    .dropdown__menu-container {
      visibility: visible;
      opacity: 1;
    }

    .dropdown__title {
      color: var(--blue-500);
    }

    .dropdown__chevron {
      transform: translateY(2px) rotate(-90deg);

      &--blue {
        stroke: var(--blue-500);
      }
    }
  }

  &__button {
    background: none;
    border: none;
    padding: 0.5rem 1rem;
    font-size: 1rem;
    font-weight: 600;
    color: var(--blue-900);
  }

  &__title {
    cursor: pointer;
  }

  &__chevron {
    margin-left: 0.3rem;
    transform: translateY(-1px) rotate(90deg);
    transition: transform 200ms ease-out;
    transform-origin: 25% 50%;
    stroke: var(--blue-900);
    stroke-width: 2;
    stroke-linecap: round;
    stroke-linejoin: round;
  }

  &__menu-container {
    padding-top: 2rem;
    position: absolute;
    z-index: 999;
    top: -70px;
    left: 50%;
    opacity: 0;
    transform: translate(-50%, 40%);
    transition: opacity 300ms ease-out, visibility 300ms ease-out, transform 300ms ease-out;
    visibility: hidden;
  }

  &__menu {
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
    width: max-content;
    padding: 1rem;
    border-radius: 10px;
    background-color: white;
    box-shadow: 0 0 24px 0 hsla(213, 78%, 16%, 0.15);
  }

  &__menu-item {
    display: flex;
    align-items: center;
    gap: 1rem;
    padding: 0.5rem 1rem;
    cursor: pointer;
    border-radius: 8px;

    &:hover {
      background-color: var(--blue-gray-50);
    }

    .btn__chevron {
      opacity: 0;
    }

    &:hover .btn__chevron {
      opacity: 1;

      path {
        transition: opacity 150ms ease-out, transform 150ms ease-out, d 150ms ease-out;
      }

      path:nth-child(1) {
        d: path("M1.5 6L10.5 6");
      }

      path:nth-child(2) {
        transform: translateX(4px);
      }
    }
  }

  &__text {
    display: flex;
    flex-direction: column;
  }

  &__text h5 {
    color: var(--blue-900);
  }

  &__text small {
    color: var(--blue-gray-600);
  }
}

.no-padding {
  padding: 1rem 2rem;
}

